--- a/object_detection/user_config.yaml
+++ b/object_detection/user_config.yaml
@@ -1,117 +1,112 @@
 general:
-  project_name: COCO_2017_person_Demo
-  model_type: st_yolo_lc_v1
-#choices=[st_ssd_mobilenet_v1, ssd_mobilenet_v2_fpnlite, tiny_yolo_v2, st_yolo_lc_v1, 
-#         st_yolo_x, yolo_v8, yolo_v5u]
-  model_path: 
+  project_name: yolo_CP #test_yolo_gs_CP_lComb_nohead1_noCls
+  #model_path: src/experiments_outputs/yolo_gs_COCO_nohead13_noCls_lComb/saved_models/best_model.h5
+  model_type: st_yolo_x
   logs_dir: logs
   saved_models_dir: saved_models
-  gpu_memory_limit: 16
-  num_threads_tflite: 4
-  global_seed: 127
+  display_figures: True
+  #gpu_memory_limit: 16 #24
+  
+  num_threads_tflite: 80
+  #global_seed: 127
 
-operation_mode: chain_tqeb
-#choices=['training' , 'evaluation', 'deployment', 'quantization', 'benchmarking',
-#        'chain_tqeb','chain_tqe','chain_eqe','chain_qb','chain_eqeb','chain_qd ']
+operation_mode: chain_tqe
 
 dataset:
-  name: COCO_2017_person
-  class_names: [ person ]                             #Or, classes_file_path
-  training_path: ./datasets/coco_person_2017_tfs/train
-  validation_path:
-  validation_split: 0.1
-  test_path: ./datasets/coco_person_2017_tfs/val
-  quantization_path: ./datasets/coco_person_2017_tfs/val
-  quantization_split: 0.01
+  name: PEDRo #COCO-OIDv6_gs #PEDRo
+  class_names: [person]
+  training_path: training_data/PEDRo/train  #training_data/coco2017_gs_person/train #training_data/PEDRo/train
+  validation_path: training_data/PEDRo/val #training_data/coco2017_gs_person/val #training_data/PEDRo/val
+  #validation_split: 0.11
+  test_path: training_data/PEDRo/test #training_data/coco2017_gs_person/test_OIDv6 #training_data/PEDRo/test
+  #quantization_path: /local/data/od_coco_2017_person/train
+  quantization_split: 0.02
 
 preprocessing:
-  rescaling: { scale: 1/127.5, offset: -1 }
-  resizing:
-    aspect_ratio: fit
-    interpolation: nearest
-  color_mode: rgb
-                       
+   rescaling:
+      scale: 1/255
+      offset: 0
+   resizing:
+      aspect_ratio: fit
+      interpolation: nearest
+   color_mode: 'rgb'
+
 data_augmentation:
-  ########## For tiny_yolo_v2 and st_yolo_lc_v1 only ###########
-  random_periodic_resizing:
-    period: 10
-    image_sizes: [(192, 192), (224, 224), (256, 256), (288, 288), (320, 320), (352, 352),
-                  (384, 384), (416, 416), (448, 448), (480, 480), (512, 512),
-                  (544, 544), (576, 576), (608, 608)]
-  random_flip:
-    mode: horizontal
-  random_crop:
-    crop_center_x: (0.25, 0.75)
-    crop_center_y: (0.25, 0.75)
-    crop_width: (0.5, 0.9)
-    crop_height: (0.5, 0.9)
-    change_rate: 0.9
   random_contrast:
     factor: 0.4
   random_brightness:
-    factor: 0.3 
+    factor: 0.3
+  random_flip:
+    mode: horizontal
+  random_translation:
+    width_factor: 0.15
+    height_factor: 0.15
+    fill_mode: reflect
+    interpolation: nearest
+  random_rotation:
+    factor: 0.02
+    fill_mode: reflect
+    interpolation: nearest
+  random_crop:
+    crop_center_x: (0.25, 0.75)
+    crop_center_y: (0.25, 0.75)
+    crop_width: (0.6, 0.9)
+    crop_height: (0.6, 0.9)
+    change_rate: 0.9
 
 training:
-  model:
-    # alpha: 0.35
-    input_shape: (192, 192, 3)
-    # pretrained_weights: imagenet
-  dropout:
-  batch_size: 64
-  epochs: 4
+  #model:
+    #input_shape: (192,192,1)
+    #depth_mul: 0.33
+    #width_mul: 0.25
+    #pretrained_weights: /home/jovyan/yolo_x_nano_train/st_yolo_x_nano_192/st_yolo_x_nano_192_0.33_0.25_greyscale.h5
+  resume_training_from: src/experiments_outputs/yolo_CP
+  dropout: null
+  batch_size: 800
+  epochs: 400
   optimizer:
     Adam:
-      learning_rate: 0.005
+      learning_rate: 0.0025
   callbacks:
-    ReduceLROnPlateau:
-      monitor: val_map
-      patience: 10
-      factor: 0.25
-    ModelCheckpoint:
-      monitor: val_map
+    LRWarmupCosineDecay:
+      initial_lr: 1.0e-05
+      warmup_steps: 20
+      max_lr: 0.00125
+      hold_steps: 20
+      decay_steps: 300
+      end_lr: 1.0e-06
     EarlyStopping:
-      monitor: val_map
-      patience: 20
+      monitor: val_loss
+      patience: 18
+      restore_best_weights: true
+      verbose: 1
 
 postprocessing:
   confidence_thresh: 0.001
   NMS_thresh: 0.5
-  IoU_eval_thresh: 0.4
-  plot_metrics: False   # Plot precision versus recall curves. Default is False.
+  IoU_eval_thresh: 0.5
+  plot_metrics: true
   max_detection_boxes: 100
-
+  #network_stride: [16]
+  
 quantization:
-  quantizer: TFlite_converter
+  quantizer: TFlite_converter #TFlite_converter
   quantization_type: PTQ
   quantization_input_type: uint8
-  quantization_output_type: float
-  granularity: per_channel   #per_tensor
-  optimize: False   #can be True if per_tensor
+  quantization_output_type: float32
+  #quantization_weights_type: int8
+  #quantization_activations_type:
+  granularity: per_channel  # Optional, defaults to "per_channel".
+  #timeout: 
+  optimize: True           # Optional, defaults to False.
   export_dir: quantized_models
-
-benchmarking:
-  board: STM32H747I-DISCO
-
-tools:
-  stedgeai:
-    version: 10.0.0
-    optimization: balanced
-    on_cloud: True
-    path_to_stedgeai: C:/Users/<XXXXX>/STM32Cube/Repository/Packs/STMicroelectronics/X-CUBE-AI/<*.*.*>/Utilities/windows/stedgeai.exe
-  path_to_cubeIDE: C:/ST/STM32CubeIDE_<*.*.*>/STM32CubeIDE/stm32cubeide.exe
-
-deployment:
-  c_project_path: ../application_code/object_detection/STM32H7/
-  IDE: GCC
-  verbosity: 1
-  hardware_setup:
-    serie: STM32H7
-    board: STM32H747I-DISCO
+  
+evaluation:
+    target: host
 
 mlflow:
-  uri: ./src/experiments_outputs/mlruns
+   uri: ./src/experiments_outputs/mlruns
 
 hydra:
-  run:
-    dir: ./src/experiments_outputs/${now:%Y_%m_%d_%H_%M_%S}
-    
+   run:
+      dir: ./src/experiments_outputs/yolo_CP
